--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8 col-md-12 custom-width-note text-center">
                         <div class="header-top-note">
-                            <p><strong>Email:</strong> Srisailaundryy@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Contact No</strong>:&nbsp;<a 
+                            <p><strong>Email:</strong> speedolaundryy@gmail.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Contact No</strong>:&nbsp;<a 
                                     href="#">91+ 9845636868</a></p>
                         </div>
                     </div>
@@ -296,7 +296,7 @@
                                 <span class="service-price">59Rs/Kg</span>
                                 <h3 class="service-title"><a href="service-details.html">Wash & Fold Starts</a></h3>
                                 <span class="service-icon">
-                                    <img src="assets/images/icons/service-icon-1.png" alt="">
+                                    <img src="assets/images/laundry/wash-n-fold.png" alt="">
                                 </span><br>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
                                 <span class="service-price">89/kg</span>
                                 <h3 class="service-title"><a href="service-details.html">Wash & Iron Starts</a></h3>
                                 <span class="service-icon">
-                                    <img src="assets/images/icons/service-icon-2.png" alt="">
+                                    <img src="assets/images/laundry/wash-n-iron.png" alt="">
                                 </span><br>
                             </div>
                         </div>
@@ -324,7 +324,7 @@
                                 <span class="service-price">149/kg</span>
                                 <h3 class="service-title"><a href="service-details.html">Express Laundry Starts</a></h3>
                                 <span class="service-icon">
-                                    <img src="assets/images/icons/service-icon-3.png" alt="">
+                                    <img src="assets/images/laundry/express-laundry-iconn.png" alt="">
                                 </span>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                 <span class="service-price">59/Piece</span>
                                 <h3 class="service-title"><a href="service-details.html">Dry Cleaning Starts</a></h3>
                                 <span class="service-icon">
-                                    <img src="assets/images/icons/service-icon-3.png" alt="">
+                                    <img src="assets/images/laundry/dry-clean.png" alt="">
                                 </span><br>
                             </div>
                         </div>
@@ -500,12 +500,11 @@
                     <div class="discount-box pt-80 pb-80 pl-100 pr-100">
                         <div class="row align-items-center">
                             <div class="col-xl-6">
-                                <h2 class="discount-title"> <span>Want to Get 20% Off?</span>
-                                Save Time & Money</h2>
+                                <h6 class="discount-title"> <span>"Streamline your laundry routine with our convenient appointment system"</h6>
                             </div>
                             <div class="col-xl-6 ">
                                 <div class="discount-btns">
-                                    <a href="contact.html" class="site-btn transparent black">Appointment <span class="icon yellow"><i class="fal fa-calendar-alt"></i></span></a>
+                                    <a href="contact.html" class="site-btn transparent black">Make An Appointment <span class="icon yellow"><i class="fal fa-calendar-alt"></i></span></a>
                                 </div>
                             </div>
                         </div>
@@ -565,7 +564,7 @@
                                     Post , Bangalore - 560092 </span>
                                 </p>
                                 <p><i class="far fa-phone"></i> <span>+91 9845636868</span> </p>
-                                <p><i class="far fa-envelope-open"></i><span> Srisailaundryy@gmail.com </span></p>
+                                <p><i class="far fa-envelope-open"></i><span> speedolaundryy@gmail.com</span></p>
                             </div>
                         </div>  <br>
                             <div class="social-links">
@@ -631,7 +630,7 @@
                 <p><i class="fal fa-rocket"></i> <span>123/A, Miranda City Likaoli Prikano, Dope United States </span>
                 </p>
                 <p><i class="far fa-phone"></i> <span>+0989 7876 9865 9</span> </p>
-                <p><i class="far fa-envelope-open"></i><span>info@example.com</span></p>
+                <p><i class="far fa-envelope-open"></i><span>speedolaundryy@gmail.com</span></p>
             </div>
         </div>
     </div>
