--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>SPEEDO - Cleaning Services HTML5 Template</title>
-
+    <title>SPEEDO Laundry - Dry & Cleaning</title>
     <!--====== Favicon ======-->
     <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="images/x-icon" />
     
