--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>SPEEDO Laundry - Dry & Cleaning</title>
+    <title>Speedo Laundry - Dry & Cleaning</title>
     <!--====== Favicon ======-->
     <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="images/x-icon" />
     
@@ -96,7 +96,7 @@
                         <div class="header-info-left-wrap">
                             <div class="header-info-left">
                                 <a href="index.html" class="site-logo">
-                                    <img src="assets/images/laundry/logo-laundry.png" alt="SRISAI">
+                                    <img src="assets/images/laundry/logo-laundry.png" alt="Speedo">
                                 </a>
                                 <a href="#0" class="site-btn">Appointment <span class="icon"><i class="fal fa-calendar-alt"></i></span></a>
                             </div>
@@ -283,6 +283,8 @@
               <option value="Wash & Iron">Wash & Iron</option>
               <option value="Express Laundry">Express Laundry</option>
               <option value="Dry Cleaning">Dry Cleaning</option>
+              <option value="Sofa Cleaning">Sofa Cleaning</option>
+              <option value="Carpet cleaning">Carpet Cleaning</option>
             </select>
           </div>
        </div> 
@@ -348,7 +350,7 @@
                     <img src="assets/images/laundry/logo-laundry.png" alt="">
                 </div>
                 <h3 class="title">About Us</h3>
-                    <p>Speedo Dry Cleaners one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website.</p>
+                    <p>Speedo Laundry one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website.</p>
             </div>
             <div class="col-xl-2 ">
                 <div class="footer-widget service-menu">
