--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>SPEEDO Laundry - Dry & Cleaning</title>
+    <title>Speedo Laundry - Dry & Cleaning</title>
 
     <!--====== Favicon ======-->
     <link rel="shortcut icon" href="assets/images/logo/favicon.png" type="images/x-icon" />
@@ -97,7 +97,7 @@
                         <div class="header-info-left-wrap">
                             <div class="header-info-left">
                                 <a href="index.html" class="site-logo">
-                                    <img src="assets/images/laundry/logo-laundry.png" alt="SRISAI">
+                                    <img src="assets/images/laundry/logo-laundry.png" alt="Speedo">
                                 </a>
                                 <a href="#0" class="site-btn">Appointment <span class="icon"><i class="fal fa-calendar-alt"></i></span></a>
                             </div>
@@ -184,7 +184,7 @@
                          </div>
                         <div class="about-list-wrapper">
                             <h4 class="title">Since 1992.</h4>
-                            <p style="line-height: 40px;">Speedo Dry Cleaners one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website Speedo Laundry.  Every clothing is handled with exceptional care, handling, and experience by Stacker Dry Laundry. Brighter, fresher, and cleaner clothes are produced using environmentally friendly processes by our company. We believe it is our duty to our customers to ensure that they receive the best cleaning possible as well as that the environment in which the clothes are handled is safe and free from any situations that could endanger our customers, the environment, or our employees. We genuinely value our employees' personal satisfaction and categorically prohibit.</p><br>
+                            <p style="line-height: 40px;">Speedo Laundry one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website Speedo Laundry.  Every clothing is handled with exceptional care, handling, and experience by Stacker Dry Laundry. Brighter, fresher, and cleaner clothes are produced using environmentally friendly processes by our company. We believe it is our duty to our customers to ensure that they receive the best cleaning possible as well as that the environment in which the clothes are handled is safe and free from any situations that could endanger our customers, the environment, or our employees. We genuinely value our employees' personal satisfaction and categorically prohibit.</p><br>
                             <div class="about-list about-list-2 mt-none-20">
                                 <div class="single-item d-flex align-items-center mt-20">
                                     <div class="icon">
@@ -421,9 +421,10 @@
                             <img src="assets/images/icons/track-icon.png" alt="">
                         </div>
                         <div class="footer-box-content">
-                            <h2 class="footer-box-title">Experience laundry care like never befor-hassle-free,convenient, and oh-so-fresh!"</h2>
-                            
-                            <a href="contact.html" class="inline-btn"><i class="fal fa-arrow-right"></i></a>
+                            <h3>Experience laundry care like never befor-hassle-free, and convenient.
+
+                            </h3>
+                           <a href="contact.html" class="inline-btn"><i class="fal fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -433,7 +434,7 @@
                             <img src="assets/images/icons/estimate-icon.png" alt="">
                         </div>
                         <div class="footer-box-content">
-                            <h2 class="footer-box-title">"Where quality meets convenience - your one-stop solution for all laundry needs."</h2>
+                            <h3>Where quality meets convenience - your one-stop solution for all laundry needs.</h2>
                         
                             <a href="contact.html" class="inline-btn"><i class="fal fa-arrow-right"></i></a>
                         </div>
@@ -453,7 +454,7 @@
                         <img src="assets/images/laundry/logo-laundry.png" alt="">
                     </div>
                     <h3 class="title">About Us</h3>
-                        <p>Speedo Dry Cleaners one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website.</p>
+                        <p>Speedo Laundry one of the best dry cleaners that provide on-demand cleaning and clothing management that you can schedule from our website.</p>
                 </div>
                 <div class="col-xl-2 ">
                     <div class="footer-widget service-menu">
