--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="copyright mt-20 pt-30 pb-30 text-center">
-                        <p>Copyright By @ Bright Ads Digital India Pvt Ltd - 2023</p>
+                        <p>Copyright By @ Thinkhub Web Solution Pvt Ltd - 2023</p>
                     </div>
                 </div>
             </div>
